<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro"
            android:layout_margin="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="ltr"
            android:layout_margin="15dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/poo1"
                android:textSize="28sp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_margin="5dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/poo2"
                android:textSize="28sp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_margin="5dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/poo3"
                android:textSize="28sp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_margin="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="ltr"
            android:layout_margin="15dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/poo4"
                android:textSize="28sp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_margin="5dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/poo5"
                android:textSize="28sp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_margin="5dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/poo6"
                android:textSize="28sp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_margin="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="ltr"
            android:layout_margin="15dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/poo7"
                android:textSize="28sp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_margin="5dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/poo8"
                android:textSize="28sp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_margin="5dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/poo9"
                android:textSize="28sp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_margin="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/poo10"
                android:textSize="28sp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_margin="5dp"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>